[gd_scene load_steps=2 format=3 uid="uid://dl32bspdhk7dt"]

[ext_resource type="Script" path="res://Levels/sandbox.gd" id="1_aebuu"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_aebuu")

[node name="spawn" type="Node2D" parent="."]
position = Vector2(876, 474)

[node name="buttons" type="Node" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="buttons"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -108.0
offset_top = 10.0
offset_right = -19.0
offset_bottom = 89.0
grow_horizontal = 0

[node name="testerman" type="Button" parent="buttons/VBoxContainer"]
layout_mode = 2
text = "Box
"
metadata/_edit_use_anchors_ = true

[node name="l_shapeman" type="Button" parent="buttons/VBoxContainer"]
layout_mode = 2
text = "L-Shape"
metadata/_edit_use_anchors_ = true

[node name="leaning_over" type="Button" parent="buttons/VBoxContainer"]
layout_mode = 2
text = "Leaning Over"
metadata/_edit_use_anchors_ = true

[node name="reclining_man" type="Button" parent="buttons/VBoxContainer"]
layout_mode = 2
text = "Reclining"
metadata/_edit_use_anchors_ = true

[node name="home" type="Button" parent="buttons/VBoxContainer"]
layout_mode = 2
text = "Home"

[connection signal="pressed" from="buttons/VBoxContainer/testerman" to="." method="_on_testerman_pressed"]
[connection signal="pressed" from="buttons/VBoxContainer/l_shapeman" to="." method="_on_l_shapeman_pressed"]
[connection signal="pressed" from="buttons/VBoxContainer/leaning_over" to="." method="_on_leaning_over_pressed"]
[connection signal="pressed" from="buttons/VBoxContainer/reclining_man" to="." method="_on_reclining_man_pressed"]
[connection signal="pressed" from="buttons/VBoxContainer/home" to="." method="_on_home_pressed"]
